# readwise-tools

./: .env.example  .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/workflows/: secret-scan.yml
readwise_tools/: __init__.py  client.py  get_document.py  infer.py  list_books.py  list_documents.py  move_document.py  prompt_sync.py  rate_document.py  rate_tag.py  save_document.py  tag_document.py  update_document.py
tests/: test_logic.py
