[project]
name = "readwise-tools"
version = "0.1.0"
description = "CLI tools for the Readwise Reader API: list documents, get text + metadata, move between locations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "fastcore>=1.7",
]

[project.scripts]
rw-list = "readwise_tools.list_documents:main"
rw-get = "readwise_tools.get_document:main"
rw-move = "readwise_tools.move_document:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["readwise_tools"]
