[project]
name = "readwise-tools"
version = "0.1.0"
description = "CLI tools for the Readwise Reader API: list documents, get text + metadata, move between locations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "fastcore>=1.7",
]

[project.scripts]
# rwr- hits Readwise Reader (v3 API); rw- hits classic Readwise (v2 API).
# rw-prompt hits neither (reads the local prompts-sync-library clone).
rwr-list = "readwise_tools.list_documents:main"
rwr-get = "readwise_tools.get_document:main"
rwr-move = "readwise_tools.move_document:main"
rwr-update = "readwise_tools.update_document:main"
rw-prompt = "readwise_tools.prompt_sync:main"
rwr-rate = "readwise_tools.rate_document:main"
rwr-tag = "readwise_tools.tag_document:main"
rwr-rate-tag = "readwise_tools.rate_tag:main"
rwr-save = "readwise_tools.save_document:main"
rw-books = "readwise_tools.list_books:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["readwise_tools"]
